2003-01-30	Ujwal S. Sathyam <ujwal@setlurgroup.com>

    * Removed terminal size constraints from Preferences, 
      Configuration panel, and Address Book entries. 
      Minimum size is 1x1.
      
    * We don't autoscroll to the bottom on shell output if 
      the user has scrolled up. Typing something on the 
      command line will trigger an autoscroll again.
      

2003-01-29	Ujwal S. Sathyam <ujwal@setlurgroup.com>

    * Incorporated patch by Aaron Gerber to add a "Cancel" 
      button in the preferences panel.
      
    * Added preference to specify tab position:
      top, left, bottom, right
      

2003-01-27	Ujwal S. Sathyam <ujwal@setlurgroup.com>

    * Refactored a lot of the addressbook menu building code.
    
    * Added addressbook menu to dock menu.
    

2003-01-25	Ujwal S. Sathyam <ujwal@setlurgroup.com>

    * Address Book window now has Autosave name.
    

2003-01-24	fabian
    * Fixed a bug in VT100Terminal that causes loss of
      character sometimes
    * Fixed bug in PseudoTerminal that makes choosing
      non-ASCII font not working
      
2003-01-23	Ujwal S. Sathyam <ujwal@setlurgroup.com>

    * Fixed mapping of function keys in VT100Terminal.
    

2003-01-21	fabian
    * Fixed bug in SetDoubleWidthString()
    * Fixed bug in attrString that disabled bold
    * Fixed bug in DECRC/DECSC
    * Fixed bug in character set settings
    
2003-01-21	Ujwal S. Sathyam <ujwal@setlurgroup.com>

    * Refactored toolbar item popup menu to enable it in 
      text only mode.
      
    * Fixed bug in PseudoTerminal: -saveSession where 
      row and column values were swapped.
      
    * Better sunchronization between window and session 
      titles. Tab label width is limited to 20 characters.
      

2003-01-20	fabian
    * New option in preference&address book entry
      Treat NonASCII characters as double width
    * Graphical characters now works for VT100 font
    * Fixed a bug in function key code